<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tadas.robotooth.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_connection_label_disconnected"
        android:editable="false"
        android:id="@+id/text_connection_status"
        android:enabled="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label_connect"
        android:id="@+id/button_connect"
        android:onClick="connectButton"
        android:layout_marginTop="36dp"
        android:layout_below="@+id/text_connection_status"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label_move_forward"
        android:id="@+id/button_move_forward"
        android:enabled="false"
        android:layout_alignTop="@+id/button_connect"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Distance:"
        android:id="@+id/text_display_distance"
        android:layout_marginTop="124dp"
        android:layout_below="@+id/button_turn_left"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label_turn_left"
        android:id="@+id/button_turn_left"
        android:enabled="false"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/button_connect"
        android:layout_toEndOf="@+id/button_connect" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label_turn_right"
        android:id="@+id/button_turn_right"
        android:enabled="false"
        android:layout_alignTop="@+id/button_turn_left"
        android:layout_toEndOf="@+id/button_move_forward" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_label_backwards"
        android:id="@+id/button_move_back"
        android:enabled="false"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/button_move_forward" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X:  Y:  Z:"
        android:id="@+id/text_display_magnetometer"
        android:layout_marginTop="27dp"
        android:layout_below="@+id/text_display_distance"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/button_turn_left" />

</RelativeLayout>
